--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
-  <body></body>
+  <body> 
+    <header class="header">
+      <nav class="header_menu">
+        <ul class="header__links-list">
+          <li class="header_menu-item header__links-list-item_no-bullit">
+            <a class="header__links-list-item">главная</a>
+          </li>
+          <li class="header_menu-item">
+            <a class="header__links-list-item" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header_menu-item">
+            <a class="header__links-list-item" href="#0">об аукционе</a>
+        </ul>
+      </nav>
+      <a class="header_logo">
+        <img class="header_logo-image" src="./images/logo-black.svg" alt="Логотип проекта" />
+      </a>
+      <address class="header__address">
+        <a href="tel:+9 999 555 5555">+9(999)555-55-55</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover"></section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
