--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </ul>
       </nav>
       <a class="header_logo">
-        <img src="./images/logo-black.svg" alt="Логотип проекта"/>
+        <img src="../images/logo-black.svg" alt="Логотип проекта"/>
       </a>
       <address class="header__address">
-        <a href="tel:+9 999 555 5555">+9(999)555-55-55</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="tel:+70000000">+9(999)555-55-55</a>
+        <a href="mailto:mail@example.com">info@sobaka.ge</a>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -99,7 +99,7 @@
       <section class="about">
         <div class="about__column">
           <a class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта"/>
+            <img class="about__logo-image" src="../images/logo-white.svg" alt="Логотип проекта"/>
           </a>
           <aside>
             <h2 class="about__title">Об аукционе</h2>
@@ -113,8 +113,8 @@
     </main>
     <footer class="footer">
       <address class="footer_addres">
-        <a href="tel:+9 999 555 5555">+9(999)555-55-55</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="tel:+70000000">+9(999)555-55-55</a>
+        <a href="mailto:mail@example.com">info@sobaka.ge</a>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p> 
       </address>
       <nav>
@@ -133,9 +133,9 @@
       <div>
         <ul>
           <li class="footer__social-link">
-            <img src="./images/yt.svg" alt="YouTube"/>
-            <img src="./images/vk.svg" alt="VK"/>
-            <img src="./images/pinterest.svg" alt="Pinterest"/>
+            <img src="../images/yt.svg" alt="YouTube"/>
+            <img src="../images/vk.svg" alt="VK"/>
+            <img src="../images/pinterest.svg" alt="Pinterest"/>
           </li>
         </ul>
       </div>
