--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link">главная</a>
+            <li class="header__links-list-item_no-bullit">
+            <a class="header__link" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">посмотреть лоты</a>
+            <a class="header__link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">об аукционе</a>
+            <a class="header__link" href="#0">об аукционе</a>
+            </li>
         </ul>
       </nav>
       <a class="header_logo">
         <img src="./images/logo-black.svg" alt="Логотип проекта"/>
       </a>
-      <address class="header__address">
-        <a href="tel:+70000000">+9(999)555-55-55</a>
-        <a href="mailto:mail@example.com">info@sobaka.ge</a>
-        <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
+      <address class="address">
+        <a class="header__address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="header__address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="header__address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
-          <div>
             <h1 class="cover__title">
             <span class="aligned-text">
               <span class="no-letter-spacing">о</span>
@@ -62,12 +62,11 @@
         </div>
       </section>
       <section class="lots">
-        <div class="lots__heading">ЛОТЫ</div>
-        <div>
+        <h2 class="lots__heading">ЛОТЫ</h2>
           <ul class="lots__card-list">
             <li class="lots__card-list-item card_type_film">
               <div class="overlay"></div>
-              <a class="card-link">
+              <a class="card-link" href="#0">
                 <article class="card">
                   <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
                   <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
@@ -76,7 +75,7 @@
             </li>
               <li class="lots__card-list-item card_type_book">
                 <div class="overlay"></div>
-                <a class="card-link">
+                <a class="card-link" href="#0">
                 <article class="card">
                   <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                   <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
@@ -85,7 +84,7 @@
               </li>
               <li class="lots__card-list-item card_type_picture">
                 <div class="overlay"></div>
-                <a class="card-link">
+                <a class="card-link" href="#0">
                 <article class="card">
                   <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                   <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
@@ -94,51 +93,61 @@
               </li>
           </ul>
         </div>
-        <a class="lots__look-more-link">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
-          <a class="about__logo">
+          <div class="about__logo">
             <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта"/>
-          </a>
-          <aside>
+          </div>
+          <aarticle>
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
           </div>
-          </aside>
+          </article>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="footer_addres">
-        <a href="tel:+70000000">+9(999)555-55-55</a>
-        <a href="mailto:mail@example.com">info@sobaka.ge</a>
-        <p class="address">наб. Принсенграхт 263-265, Амстердам</p> 
+      <address class="address">
+        <a class="footer_address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="footer_address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="footer_address">наб. Принсенграхт 263-265, Амстердам</p> 
       </address>
       <nav>
         <ul  class="footer__menu-list">
-          <li>
-            <a class="footer__menu-link_active">главная</a>
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a class="footer__menu-link" href="#0">главная</a>
           </li>
-          <li>
-            <a class="footer__menu-link">посмотреть лоты</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
-          <li>
-            <a class="footer__menu-link">об аукционе</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <div>
-        <ul>
-          <li class="footer__social-link">
-            <img src="./images/yt.svg" alt="YouTube"/>
-            <img src="./images/vk.svg" alt="VK"/>
-            <img src="./images/pinterest.svg" alt="Pinterest"/>
-          </li>
+      <nav>
+        <ul class="footer__social-link">
+          <li>
+            <a class="footer__social-icon" href="#0" target="_blank">
+            <img src="./images/yt.svg" alt="YouTube">
+          </a>
+        </li>
+        <li>
+          <a class="footer__social-icon" href="#0" target="_blank">
+            <img src="./images/vk.svg" alt="VK"/> 
+          </a>
+        </li>
+        <li>
+          <a class="footer__social-icon" href="#0" target="_blank">
+            <img src="./images/pinterest.svg" alt="Pinterest"/> 
+          </a>
+        </li>
         </ul>
-      </div>
+      </nav>
     </footer>
   </body>
 </html>
