--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header_logo">
-      <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта"/>
+      <img src="./images/logo-black.svg" alt="Логотип проекта"/>
       </a>
       <address class="address">
         <a class="header__address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
