вроде сделала логотип и текст

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header_logo">
-      <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта"/>
+      <img src="./images/logo-black.svg" alt="Логотип проекта"/>
       </a>
       <address class="address">
         <a class="header__address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
@@ -37,22 +37,12 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">
-          <span class="no-letter-spacing">о</span>
-          <span class="letter-spacing-extended">н</span>
-          <span class="no-letter-spacing">о</span>
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span>
           </span>
-          <span class="aligned-text_center">
-          <span class="no-letter-spacing">т</span>
-          <span class="no-letter-spacing">е</span>
-          <span class="letter-spacing-extended">б</span>
-          <span class="no-letter-spacing">е</span>
-          </span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
+        </span>
           <span class="aligned-text_right">
-          <span class="letter-spacing-extended">н</span>
-          <span class="no-letter-spacing">а</span>
-          <span class="no-letter-spacing">д</span>
-          <span class="no-letter-spacing">о</span>
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
           </span>
         </h1>
         <div class="cover__description">
