--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src="./images/logo-black.svg" alt="Логотип проекта"/>
       </a>
       <address class="address">
-        <a class="header__address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="header__address" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="header__address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="header__address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
@@ -40,7 +40,7 @@
           <span class="aligned-text">о<span class="letter-spacing-extended">но</span>
           </span>
           <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
-        </span>
+          </span>
           <span class="aligned-text_right">
           <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
           </span>
@@ -48,7 +48,6 @@
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
-        </div>
         </div>
       </section>
       <section class="lots">
@@ -82,7 +81,6 @@
             </a>
           </li>
         </ul>
-        </div>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
@@ -90,7 +88,7 @@
           <div class="about__logo">
             <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта"/>
           </div>
-          <aarticle>
+          <article>
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
@@ -102,7 +100,7 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <a class="footer_address" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="footer_address" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="footer_address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="footer_address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
