--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header_logo">
-      <img src="./images/logo-black.svg" alt="Логотип проекта"/>
+        <img src="./images/logo-black.svg" alt="Логотип проекта"/>
       </a>
       <address class="address">
         <a class="header__address" href="tel:+99995555555">+9 999 555 5555</a>
@@ -37,13 +37,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">о<span class="letter-spacing-extended">но</span>
-          </span>
-          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
-          </span>
-          <span class="aligned-text_right">
-          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
-          </span>
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
@@ -51,7 +47,7 @@
         </div>
       </section>
       <section class="lots">
-        <h2 class="lots__heading">ЛОТЫ</h2>
+        <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
             <div class="overlay"></div>
@@ -84,18 +80,16 @@
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about__column">
-          <div class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта"/>
-          </div>
-          <article>
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта"/>
+        </div>
+        <article>
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
           </div>
-          </article>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
@@ -121,17 +115,17 @@
         <ul class="footer__social-list">
           <li>
             <a href="#0" target="_blank">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="YouTube">
+              <img class="footer__social-icon" src="./images/yt.svg" alt="YouTube">
             </a>
           </li>
           <li>
             <a href="#0" target="_blank">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="VK"/> 
+              <img class="footer__social-icon" src="./images/vk.svg" alt="VK"/> 
             </a>
           </li>
           <li>
             <a href="#0" target="_blank">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Pinterest"/> 
+              <img class="footer__social-icon" src="./images/pinterest.svg" alt="Pinterest"/> 
             </a>
           </li>
         </ul>
